<resources>
    <string name="app_name">ConversorMoedas</string>
    <string name="qual_o_valor_em_real">Valor em Real: </string>
    <string name="valor_em_dolar">Valor em dolar :</string>
    <string name="valor_em_euro">Valor em euro :</string>
    <string name="calcular">Calcular</string>
    <string name="converter_dolar">Converter dolar</string>
    <string name="qual_o_valor_em_dolar">Valor em Dolar:</string>
    <string name="valor_em_real">Valor em Real:</string>
    <string name="valor_em_euro_2">Valor em Euro</string>
    <string name="conversor_de_moedas">Conversor de Moedas</string>
    <string name="para_dolar">Dolar</string>
    <string name="para_real">Real</string>
    <string name="para_euro">Euro</string>
    <string name="Valor_em_euro">Valor em euro:</string>
</resources>
