<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/appwalpaper"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="50dp"
        android:textSize="25sp"
        android:text="@string/qual_o_valor_em_real"
        android:textColor="@color/colorWhite"/>

    <EditText
        android:id="@+id/edit_Value"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@color/colorWhite"
        android:textColor="@color/colorBlack"
        android:inputType="numberSigned"
        android:text="" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:textSize="18sp"
        android:layout_marginLeft="10sp"
        android:textColor="@color/colorWhite"
        android:text="@string/valor_em_dolar" />

    <TextView
        android:id="@+id/text_Dolar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10sp"
        android:textColor="@color/colorAccent"
        android:textSize="18sp"
        android:text="@string/valor_em_dolar" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:layout_marginLeft="10sp"
        android:textSize="18sp"
        android:textColor="@color/colorWhite"
        android:text="@string/valor_em_euro" />

    <TextView
        android:id="@+id/text_Euro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10sp"
        android:textColor="@color/colorAccent"
        android:textSize="18sp"
        android:text="@string/valor_em_euro" />

    <Button
        android:id="@+id/button_Calculate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/calcular"
        android:textColor="@color/colorBlack"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="100dp"
        android:background="@drawable/background_button" />

</LinearLayout>