<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/appwalpaper"
    tools:context=".DolarActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/qual_o_valor_em_dolar"
        android:textColor="@color/colorWhite"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:textSize="25sp"/>

    <EditText
        android:id="@+id/edit_Dolar"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@color/colorWhite"
        android:layout_marginTop="10dp"
        android:inputType="numberSigned"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:layout_marginLeft="15dp"
        android:textSize="18sp"
        android:textColor="@color/colorWhite"
        android:text="@string/valor_em_real"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/text_Real"
        android:textSize="18sp"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:textColor="@color/colorAccent"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:layout_marginLeft="15sp"
        android:textColor="@color/colorWhite"
        android:text="@string/valor_em_euro_2"
        android:textSize="18sp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/text_Euro2"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:textSize="18sp"
        android:textColor="@color/colorAccent" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background_button"
        android:textColor="@color/colorBlack"
        android:text="Calcular"
        android:id="@+id/button_CalculateDolar"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="50dp"
        />


</LinearLayout>